--- a/.gitattributes
+++ b/.gitattributes
@@ -2,12 +2,9 @@
 
 *.js linguist-vendored
 *.css linguist-vendored
-*.scss linguist-vendored
+*.less linguist-vendored
 *.json linguist-vendored
 *.html linguist-vendored
-
-# Mark the database schema as having been generated.
-db/schema.rb linguist-generated
 
 # Mark any vendored files as having been vendored.
 vendor/* linguist-vendored
