--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -1,29 +1,29 @@
 # Lesli
-
+#
 # Copyright (c) 2023, Lesli Technologies, S. A.
-
+#
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
 # (at your option) any later version.
-
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 # GNU General Public License for more details.
-
+#
 # You should have received a copy of the GNU General Public License
 # along with this program. If not, see http://www.gnu.org/licenses/.
-
-# Lesli · Ruby on Rails Development Platform.
-
+#
+# Lesli · Ruby on Rails SaaS development platform.
+#
 # Made with ♥ by https://www.lesli.tech
 # Building a better future, one line of code at a time.
-
+#
 # @contact  hello@lesli.tech
 # @website  https://www.lesli.tech
 # @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
-
+#
 # // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 # // · 
 
@@ -31,7 +31,7 @@
 
 # -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-
 # PLEASE DO NOT MODIFY THIS FILE ON THE CORE,
-# THIS FILE SHOULD BE MODIFIED ON THE leitfaden/github_actions REPOSITORY
+# THIS FILE SHOULD BE MODIFIED ON THE LesliTech/LesliGithub REPOSITORY
 # -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-
 
 
@@ -54,7 +54,7 @@ on:
 
   # run a test daily at 1 am (Guatemala time)
   schedule:
-    - cron: '0 1 * * *'
+    - cron: "0 1 * * *"
 
 
   # Allow to execute this test manually from the Github web app
@@ -63,7 +63,7 @@ on:
 jobs:
   test:
     name: Test workflow for Lesli Core
-    runs-on: ubuntu-latest
+    runs-on: latest
 
 
     # Do not execute the test if requests comes from another action
@@ -75,9 +75,9 @@ jobs:
       postgres:
         image: postgres:11.5
         env:
-          POSTGRES_DB: "lesli-test"
-          POSTGRES_USER: "lesli-test"
-          POSTGRES_PASSWORD: "lesli-test"
+          POSTGRES_USER: leslicloud_test
+          POSTGRES_DB: leslicloud_test
+          POSTGRES_PASSWORD: "leslicloud_test"
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -99,6 +99,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.ref }}
+          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
 
 
       # Use the official receipt to install ruby in ubuntu
@@ -107,20 +108,37 @@ jobs:
         with:
           ruby-version: 3.1.2
           bundler-cache: true
+        env:
+          ImageOS: ubuntu20
 
 
       # Build the Lesli database
       - name: Set up database schema
         run: |
-          cp ./config/credentials/testci.key ./config/credentials/test.key
           cp ./config/credentials/testci.yml.enc ./config/credentials/test.yml.enc
+          bundle list
           bundle exec rake db:drop
           bundle exec rake db:create
           bundle exec rake db:migrate
-          bundle exec rake db:setup
+          bundle exec rake db:seed
         env:
           RAILS_ENV: test
+          RAILS_MASTER_KEY: ${{ secrets.CORE_RAILS_MASTER_KEY_TEST }}
+
 
       # Run Rspec tests
       - name: Run Spec tests
         run: bundle exec rspec spec
+        env:
+          RAILS_ENV: test
+          RAILS_MASTER_KEY: ${{ secrets.CORE_RAILS_MASTER_KEY_TEST }}
+
+
+      # Install node dependencies needed for vue tests
+      - name: Install Nodejs modules
+        run: npm install
+
+
+      # Run Vue tests
+      - name: Run Vue tests
+        run: npm run test:vue
