--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -67,10 +67,7 @@ jobs:
 
 
     # Do not execute the test if requests comes from another action
-    if: "!contains(github.event.head_commit.message, 'ci(workflows):')"
-    if: "!contains(github.event.head_commit.message, 'release(gem):')"
-    if: "!contains(github.event.head_commit.message, 'assets(js):')"
-
+    if: ${{ !contains(github.event.head_commit.message, 'ci(workflows):') && !contains(github.event.head_commit.message, 'release(gem):') && !contains(github.event.head_commit.message, 'assets(js):') }}
 
     # Start database service necessary to execute the RSpec tests
     services:
@@ -101,7 +98,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.ref }}
-          token: ${{ secrets.PUBLISH_GEM_BY_ACTIONS }}
+          token: ${{ secrets.READ_REPOS_BY_ACTIONS }}
 
 
       # Use the official receipt to install ruby in ubuntu
