--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -98,7 +98,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.ref }}
-          token: ${{ secrets.READ_REPOS_BY_ACTIONS }}
+          token: ${{ secrets.READ_REPOSITORIES_BY_GEM }}
 
 
       # Use the official receipt to install ruby in ubuntu
