--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -88,11 +88,6 @@ jobs:
 
     steps:
 
-      # Set the right owner for work folders
-      - name: Set folder permissions
-        run: "sudo chown -R $USER:$USER $GITHUB_WORKSPACE/"
-
-
       # Clone the current repository
       - name: Checkout Lesli core repository
         uses: actions/checkout@v3
@@ -106,13 +101,12 @@ jobs:
         with:
           ruby-version: 3.1.2
           bundler-cache: true
-        env:
-          ImageOS: ubuntu20
 
 
       # Build the Lesli database
       - name: Set up PostgreSQL database 
         run: |
+          cp ./config/credentials/testci.key ./config/credentials/test.key
           cp ./config/credentials/testci.yml.enc ./config/credentials/test.yml.enc
           bundle list
           bundle exec rake db:drop
@@ -121,15 +115,11 @@ jobs:
           bundle exec rake db:seed
         env:
           RAILS_ENV: test
-          RAILS_MASTER_KEY: ${{ secrets.CORE_RAILS_MASTER_KEY_TEST }}
 
 
       # Run Rspec tests
       - name: Run Rails tests
         run: bundle exec rspec spec
-        env:
-          RAILS_ENV: test
-          RAILS_MASTER_KEY: ${{ secrets.CORE_RAILS_MASTER_KEY_TEST }}
 
 
       # Install node dependencies needed for vue tests
