--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-#
 # Lesli
 #
 # Copyright (c) 2023, Lesli Technologies, S. A.
@@ -16,16 +15,16 @@
 # You should have received a copy of the GNU General Public License
 # along with this program. If not, see http://www.gnu.org/licenses/.
 #
-# Lesli · Your Smart Business Assistant. 
+# Lesli · Ruby on Rails SaaS Development Engine.
 #
 # Made with ♥ by https://www.lesli.tech
 # Building a better future, one line of code at a time.
 #
 # @contact  hello@lesli.tech
-# @website  https://lesli.tech
+# @website  https://www.lesli.dev
 # @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 #
-# // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+# // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 # // · 
 
 
