--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@ Layout/IndentationWidth:
     Width: 4
 
 Layout/LineLength: 
-    Max: 150
+    Max: 180
 
 Naming/VariableNumber:
     CheckSymbols: false
@@ -32,3 +32,12 @@ Metrics/MethodLength:
 
 Metrics/BlockLength:
     Max: 30
+
+Metrics/ModuleLength:
+    Max: 225
+
+Metrics/PerceivedComplexity: 
+    Max: 15
+
+Metrics/CyclomaticComplexity:
+    Max: 15
