--- a/.gitignore
+++ b/.gitignore
@@ -15,13 +15,13 @@
 # You should have received a copy of the GNU General Public License
 # along with this program. If not, see http://www.gnu.org/licenses/.
 #
-# Lesli · Ruby on Rails SaaS Development Engine.
+# Lesli · Ruby on Rails SaaS Development Framework.
 #
 # Made with ♥ by https://www.lesli.tech
 # Building a better future, one line of code at a time.
 #
 # @contact  hello@lesli.tech
-# @website  https://www.lesli.dev
+# @website  https://www.lesli.tech
 # @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 #
 # // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
@@ -31,12 +31,11 @@
 # See https://help.github.com/articles/ignoring-files for more about ignoring files.
 
 
-# Development folders
-
-
 # Development dependencies, packages, gems and tools
 .DS_store
-Gemfile.lock
-package-lock.json
-/node_modules
 .ruby-version
+
+Gemfile.lock
+
+/node_modules
+package-lock.json
