--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -128,3 +128,7 @@ jobs:
       - name: Run Rails tests
         run: bundle exec rspec spec
 
+      - name: Brakeman code scanning
+        uses: standardnotes/brakeman-action@v1.0.0
+        with:
+          options: "--color -q"
