--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -128,7 +128,8 @@ jobs:
       - name: Run Rails tests
         run: bundle exec rspec spec
 
-      - name: Brakeman code scanning
-        uses: standardnotes/brakeman-action@v1.0.0
+      - name: brakeman
+        uses: reviewdog/action-brakeman@v2
         with:
-          options: "--color -q"
+          brakeman_version: 4.8.2
+          reporter: github-pr-check
