--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.{rake,rb,ts,vue,js,json,yml,scss,styl,css,html,haml,erb,md,thor,mjml.gemspec}]
+[*.{rake,rb,ts,vue,js,json,yml,scss,styl,css,html,haml,erb,md,thor,mjml,.gemspec,.template}]
 indent_style = space
 indent_size = 4
 charset = utf-8
