--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "author": "The Lesli Development Team <hello@lesli.tech>",
     "devDependencies": {
 
-        "lesli-css": "../../../lesli-css/lesli-css-2.0.0.tgz",
-        "lesli-vue": "../../../lesli-vue/lesli-vue-1.0.2.tgz",
+        "lesli-css": "../../../lesli-css/lesli-css-2.1.0.tgz",
+        "lesli-vue": "../../../lesli-vue/lesli-vue-1.1.0.tgz",
 
-        "v-calendar": "3.0.3",
         "sortablejs": "1.15.0",
 
         "pinia": "2.1.6",
@@ -44,15 +43,13 @@
         "webpack-cli": "5.1.4",
         "terser-webpack-plugin": "5.3.9",
 
-        "node-sass":"9.0.0",
         "sass-loader": "14.1.0",
         "mini-css-extract-plugin":"2.8.0",
         "webpack-remove-empty-scripts": "1.0.4",
 
         "chai": "4.3.7",
         "glob": "10.3.3",
-        "jest": "29.6.2",
-        "sass-true": "7.0.0"
+        "jest": "29.6.2"
     },
     "scripts": {
         "webpack": "webpack --progress --env mode=development",
