--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -40,12 +40,11 @@
 name: "Lesli specs workflow"
 on:
 
-
-  # execute this workflow only when trying to merge from dev branch to master
+  # Execute this workflow when trying to merge from dev branch to master
   pull_request:
     branches: [master, production]
 
-  # execute this workflow when push to master
+  # Execute this workflow when push to master
   push:
     branches: [master]
 
@@ -53,15 +52,13 @@ on:
   #schedule:
   #  - cron: "0 1 * * *"
 
-
-  # Allow to execute this test manually from the Github web app
+  # Allow to execute this test manually from the GitHub web app
   workflow_dispatch:
 
 jobs:
-  test:
-    name: Test workflow for Lesli Core
+  postgres-test:
+    name: Test workflow for Lesli Core (PostgreSQL)
     runs-on: ubuntu-latest
-
 
     # Do not execute the test if requests comes from another action
     if: ${{ !contains(github.event.head_commit.message, 'ci(workflows):') && !contains(github.event.head_commit.message, 'release(gem):') && !contains(github.event.head_commit.message, 'assets(js):') }}
@@ -82,7 +79,6 @@ jobs:
         ports:
           - 5432:5432
 
-
     steps:
 
       # Clone LesliBuilder repository
@@ -90,7 +86,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: LesliTech/LesliBuilder
-
 
       # Clone Lesli repository
       - name: Checkout Lesli repository
@@ -102,7 +97,7 @@ jobs:
       # Build the Lesli database
       - name: Copy configuration files
         run: |
-          cp ./engines/Lesli/.github/rails/database.yml ./config/database.yml
+          cp ./engines/Lesli/.github/rails/database_postgresql.yml ./config/database.yml
           rm ./Gemfile.lock
 
       # Use the official receipt to install ruby in ubuntu
@@ -112,16 +107,54 @@ jobs:
           ruby-version: 3.2.5
           bundler-cache: true
 
-
       # Build the Lesli database
       - name: Set up PostgreSQL database 
         run: RAILS_ENV=test bundle exec rake lesli:db:reset
         env:
           RAILS_ENV: test
 
-
       # Run Rspec tests
       - name: Run Rails tests
+        run: bundle exec rspec spec
+        env:
+          CODECOV: true
+
+  sqlite-test:
+    name: Test workflow for Lesli Core (SQLite)
+    runs-on: ubuntu-latest
+
+    # This job depends on the postgres-test job
+    needs: postgres-test
+
+    steps:
+      - name: Checkout LesliBuilder repository
+        uses: actions/checkout@v3
+        with:
+          repository: LesliTech/LesliBuilder
+
+      - name: Checkout Lesli repository
+        uses: actions/checkout@v3
+        with:
+          path: ./engines/Lesli
+          repository: LesliTech/Lesli
+
+      - name: Copy SQLite configuration files
+        run: |
+          cp ./engines/Lesli/.github/rails/database_sqlite.yml ./config/database.yml
+          rm ./Gemfile.lock
+
+      - name: Install Ruby and gems
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.2.5
+          bundler-cache: true
+
+      - name: Set up SQLite database
+        run: RAILS_ENV=test bundle exec rake lesli:db:reset
+        env:
+          RAILS_ENV: test
+
+      - name: Run Rails tests with SQLite
         run: bundle exec rspec spec
         env:
           CODECOV: true
