--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -119,6 +119,18 @@ jobs:
         env:
           CODECOV: true
 
+      # Upload coverage report to codecov
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          directory: ./coverage/
+          env_vars: OS,PYTHON
+          fail_ci_if_error: true
+          files: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: LesliTech/lesli-vue
+          verbose: true
+
   sqlite-test:
     name: Test workflow for Lesli Core (SQLite)
     runs-on: ubuntu-latest
@@ -158,3 +170,14 @@ jobs:
         run: bundle exec rspec spec
         env:
           CODECOV: true
+          
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          directory: ./coverage/
+          env_vars: OS,PYTHON
+          fail_ci_if_error: true
+          files: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: LesliTech/lesli-vue
+          verbose: true
