test: upload coverage reporte to codecov

--- a/.github/workflows/lesli-spec.yaml
+++ b/.github/workflows/lesli-spec.yaml
@@ -118,6 +118,7 @@ jobs:
         run: bundle exec rspec spec
         env:
           CODECOV: true
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       # Upload coverage report to codecov
       - name: Upload coverage to Codecov
