--- a/.github/workflows/lesli-ci.yaml
+++ b/.github/workflows/lesli-ci.yaml
@@ -1,5 +1,43 @@
-name: "Lesli specs workflow"
+# Lesli
+#
+# Copyright (c) 2023, Lesli Technologies, S. A.
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program. If not, see http://www.gnu.org/licenses/.
+#
+# Lesli · Ruby on Rails SaaS Development Framework.
+#
+# Made with ♥ by https://www.lesli.tech
+# Building a better future, one line of code at a time.
+#
+# @contact  hello@lesli.tech
+# @website  https://www.lesli.dev
+# @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
+# // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+# // · 
 
+
+
+# -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-
+# PLEASE DO NOT MODIFY THIS FILE ON THE CORE,
+# THIS FILE SHOULD BE MODIFIED ON THE LesliTech/LesliActions REPOSITORY
+# -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-
+
+
+
+# Specs for Lesli Core
+# -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-
+name: "Lesli specs workflow (core)"
 on:
   pull_request:
     branches: [master, production]
