--- a/.github/workflows/lesli-spec-postgresql.yaml
+++ b/.github/workflows/lesli-spec-postgresql.yaml
@@ -84,7 +84,6 @@ jobs:
           path: ./engines/Lesli
           repository: LesliTech/Lesli
 
-        
       # Clone engine repository
       - name: Checkout code
         if: github.event.repository.name != 'Lesli'
@@ -95,6 +94,7 @@ jobs:
       # Build the Lesli database
       - name: Copy configuration files
         run: |
+          cp ./engines/${{ github.event.repository.name }}/.github/tools/.rspec ./.rspec
           cp ./engines/Lesli/.github/rails/database_postgresql.yml ./config/database.yml
           rm ./Gemfile.lock
 
