test: rspec splited workflows

--- a/.github/workflows/lesli-spec-sqlite.yaml
+++ b/.github/workflows/lesli-spec-sqlite.yaml
@@ -86,6 +86,11 @@ jobs:
           ruby-version: 3.2.5
           bundler-cache: true
 
+      # Install core gems
+      - name: Install Ruby and gems
+        run: |
+          bundle add LesliShield
+
       # Build the Lesli database
       - name: Set up SQLite database
         run: RAILS_ENV=test bundle exec rake lesli:db:reset
