--- a/.github/workflows/lesli-spec-sqlite.yaml
+++ b/.github/workflows/lesli-spec-sqlite.yaml
@@ -89,7 +89,7 @@ jobs:
       # Install core gems
       - name: Install Ruby and gems
         run: |
-          bundle add LesliShield
+          bundle add Lesli_shield
 
       # Build the Lesli database
       - name: Set up SQLite database
